--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NotifierEdit/AddressFields.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NotifierEdit/AddressFields.cshtml
@@ -1,9 +1,10 @@
 ﻿
 @model DH.Helpdesk.Web.Models.Notifiers.InputModel
 
-@{ var attributes = Model.ComputerUserCategoryModel.IsReadOnly ? (object)new { htmlAttributes = new { @readonly = "readonly" } } : new { };}
+@{ var attributes = Model.IsReadOnly ? (object)new { htmlAttributes = new { @readonly = "readonly" } } : new { };}
+
 <div class="container">
-    <h4>@Translation.Get("Adress", Enums.TranslationSource.TextTranslation)</h4>
+    <h4>@Translation.GetCoreTextTranslation("Adress")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
