--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NotifierEdit/OrganizationFields.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NotifierEdit/OrganizationFields.cshtml
@@ -1,13 +1,11 @@
 ﻿
-@using System.Web.Optimization
-@using System.Web.Script.Serialization
 @using DH.Helpdesk.Web.Infrastructure.Extensions.HtmlHelperExtensions
 @model DH.Helpdesk.Web.Models.Notifiers.InputModel
 
-@{ var attributes = Model.ComputerUserCategoryModel.IsReadOnly ? (object)new { htmlAttributes = new { @readonly = "readonly" } } : new { };}
+@{ var attributes = Model.IsReadOnly ? (object)new { htmlAttributes = new { @readonly = "readonly" } } : new { };}
 
 <div class="container">
-    <h4>@Translation.Get("Organisation", Enums.TranslationSource.TextTranslation)</h4>
+    <h4>@Translation.Get("Organisation")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
@@ -18,10 +16,10 @@
                     <tr>
                         <td class="span3">
                             @* Region in Notifier is only for filtering help*@
-                            @(Translation.Get(Model.Region.Caption, Enums.TranslationSource.TextTranslation))
+                            @(Translation.Get(Model.Region.Caption))
                         </td>
                         <td>
-                            @Html.DropDown("region_dropdown", "RegionId", !Model.Region.Required, Model.Region.Value, false, Model.ComputerUserCategoryModel.IsReadOnly)
+                            @Html.DropDown("region_dropdown", "RegionId", !Model.Region.Required, Model.Region.Value, false, Model.IsReadOnly)
                         </td>
                     </tr>
                 }
@@ -30,11 +28,11 @@
                 {
                     <tr>
                         <td class="span3">
-                            @(Translation.Get(Model.Department.Caption, Enums.TranslationSource.TextTranslation) + (Model.Department.Required ? "*" : string.Empty))
+                            @(Translation.Get(Model.Department.Caption) + (Model.Department.Required ? "*" : string.Empty))
                         </td>
                         <td>
                             <div id="department_dropdown_container">
-                                @Html.Partial("DepartmentDropDown", Model.Department.Value, new ViewDataDictionary { { "Required", Model.Department.Required }, { "ReadOnly", Model.ComputerUserCategoryModel.IsReadOnly } })
+                                @Html.Partial("DepartmentDropDown", Model.Department.Value, new ViewDataDictionary { { "Required", Model.Department.Required }, { "ReadOnly", Model.IsReadOnly } })
                             </div>
                         </td>
                     </tr>
@@ -44,11 +42,11 @@
                 {
                     <tr>
                         <td class="span3">
-                            @(Translation.Get(Model.OrganizationUnit.Caption, Enums.TranslationSource.TextTranslation) + (Model.OrganizationUnit.Required ? "*" : string.Empty))
+                            @(Translation.Get(Model.OrganizationUnit.Caption) + (Model.OrganizationUnit.Required ? "*" : string.Empty))
                         </td>
                         <td>
                             <div id="organizationUnit_dropdown_container">
-                                @Html.Partial("OrganizationUnitDropDown", Model.OrganizationUnit.Value, new ViewDataDictionary { { "Required", Model.OrganizationUnit.Required }, { "ReadOnly", Model.ComputerUserCategoryModel.IsReadOnly } })
+                                @Html.Partial("OrganizationUnitDropDown", Model.OrganizationUnit.Value, new ViewDataDictionary { { "Required", Model.OrganizationUnit.Required }, { "ReadOnly", Model.IsReadOnly } })
                             </div>
                         </td>
                     </tr>
@@ -61,10 +59,10 @@
                 {
                     <tr>
                         <td class="span3">
-                            @(Translation.Get(Model.Division.Caption, Enums.TranslationSource.TextTranslation) + (Model.Division.Required ? "*" : string.Empty))
+                            @(Translation.Get(Model.Division.Caption) + (Model.Division.Required ? "*" : string.Empty))
                         </td>
                         <td>
-                            @Html.DropDown("division_dropdown", "DivisionId", !Model.Division.Required, Model.Division.Value, Model.Division.Required, Model.ComputerUserCategoryModel.IsReadOnly)
+                            @Html.DropDown("division_dropdown", "DivisionId", !Model.Division.Required, Model.Division.Value, Model.Division.Required, Model.IsReadOnly)
                         </td>
                     </tr>
                 }
@@ -73,7 +71,7 @@
                 {
                     <tr>
                         <td class="span3">
-                            @(Translation.Get(Model.Managers.Caption, Enums.TranslationSource.TextTranslation) + (Model.Managers.Required ? "*" : string.Empty))
+                            @(Translation.Get(Model.Managers.Caption) + (Model.Managers.Required ? "*" : string.Empty))
                         </td>
                         <td>
                             @{
@@ -96,10 +94,10 @@
                 {
                     <tr>
                         <td class="span3">
-                            @(Translation.Get(Model.Group.Caption, Enums.TranslationSource.TextTranslation) + (Model.Group.Required ? "*" : string.Empty))
+                            @(Translation.Get(Model.Group.Caption) + (Model.Group.Required ? "*" : string.Empty))
                         </td>
                         <td>
-                            @Html.DropDown("group_dropdown", "GroupId", !Model.Group.Required, Model.Group.Value, false, Model.ComputerUserCategoryModel.IsReadOnly)
+                            @Html.DropDown("group_dropdown", "GroupId", !Model.Group.Required, Model.Group.Value, false, Model.IsReadOnly)
                         </td>
                     </tr>
                 }
