--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NotifierEdit/StateFields.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NotifierEdit/StateFields.cshtml
@@ -2,16 +2,16 @@
 @model DH.Helpdesk.Web.Models.Notifiers.InputModel
            
 <div class="container">
-    <h4>@Translation.Get("Status", Enums.TranslationSource.TextTranslation)</h4>
+    <h4>@Translation.GetCoreTextTranslation("Status")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
                 <tr>
                     <td class="span3">
-                       @Translation.Get("Aktiv", Enums.TranslationSource.TextTranslation)
+                       @Translation.GetCoreTextTranslation("Aktiv")
                     </td>
                     <td class="span9">
-                        @Html.CheckBoxFor(m => m.IsActive, Model.ComputerUserCategoryModel.IsReadOnly ? (object)new { @class = "switchcheckbox", @readonly = "readonly" } : new { @class = "switchcheckbox" })
+                        @Html.CheckBoxFor(m => m.IsActive, Model.IsReadOnly ? (object)new { @class = "switchcheckbox", @readonly = "readonly" } : new { @class = "switchcheckbox" })
                     </td>
                 </tr>
                 @if (!Model.IsNew)
