--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.html
@@ -1,10 +1,10 @@
-<div class="case-subsection">
-<span class="mbsc-label case-subsection-title" translate>Bifogad fil</span>
-<br>
-  <mbsc-listview [options]="fileListSettings">
-      <mbsc-listview-item *ngFor="let item of files; trackBy: identify" 
-          icon="fa-paperclip"
-          (click)="downloadFile(item)">{{ item.fileName }}</mbsc-listview-item>
-  </mbsc-listview>
-  <case-files-upload [caseKey]='caseKey'></case-files-upload>
+<div class="case-subsection" id="case-files">
+  <span class="mbsc-label case-subsection-title" translate>Bifogad fil</span>
+  <br/>
+    <mbsc-listview [options]="fileListSettings">
+        <mbsc-listview-item *ngFor="let item of files; trackBy: identify" 
+            icon="fa-paperclip"
+            (click)="downloadFile(item)">{{ item.fileName }}</mbsc-listview-item>
+    </mbsc-listview>
+    <case-files-upload [caseKey]='caseKey'></case-files-upload>
 </div>
