--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -168,6 +168,15 @@
                                             <input type="hidden" name="Casesolution.ShowInsideCase" value="0" />
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td>
+                                            @Translation.Get("Visa på mobil", Enums.TranslationSource.TextTranslation)
+                                        </td>
+                                        <td class="checkbox" style="padding-left: 20px">
+                                            <input type="checkbox" name="Casesolution.ShowOnMobile" @(Model.CaseSolution.ShowOnMobile != 0 ? "checked=checked" : "") value="1" />
+                                            <input type="hidden" name="Casesolution.ShowOnMobile" value="0" />
+                                        </td>
+                                    </tr>
                                 </table>
                                 <div id="divShowCase" style="display:none; padding:0px;width:100%">
                                     <div class="row">
