--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -305,7 +305,7 @@
                                                     @if (Model.CustomerSettings.ModuleComputerUser && Model.IsUserAdmin)
                                                     {
                                                         <a href="javascript:;" data-field="inititatorDetails" style="display: none;" 
-                                                           title="@Model.getSectionHeader(CaseSectionType.Initiator, CaseSections.InitiatorHeader) @Translation.GetCoreTextTranslation("Information")" 
+                                                           title="@Model.getSectionHeader(CaseSectionType.Initiator, CaseSections.InitiatorHeader)" 
                                                            class="btn"><i class="icon-user"></i></a>
                                                     }
                                                 </td>
